@@ -32,15 +32,14 @@ import org.apache.hadoop.hive.ql.txn.compactor.CleanupRequest;
 import org.apache.hadoop.hive.ql.txn.compactor.FSRemover;
 import org.apache.hadoop.hive.ql.txn.compactor.MetadataCache;
 import org.apache.hadoop.hive.ql.txn.compactor.TestCleaner;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import static org.apache.hadoop.hive.conf.HiveConf.ConfVars.HIVE_COMPACTOR_DELAYED_CLEANUP_ENABLED;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
@@ -69,7 +68,7 @@ public class TestHandler extends TestCleaner {
     Cleaner cleaner = new Cleaner();
     cleaner.setConf(conf);
     cleaner.init(stop);
-    cleaner.setCleanupHandlers(Arrays.asList(mockedTaskHandler));
+    cleaner.setCleanupHandlers(List.of(mockedTaskHandler));
     cleaner.run();
 
     Mockito.verify(mockedFSRemover, Mockito.times(1)).clean(any(CleanupRequest.class));
@@ -100,12 +99,12 @@ public class TestHandler extends TestCleaner {
     Cleaner cleaner = new Cleaner();
     cleaner.setConf(conf);
     cleaner.init(new AtomicBoolean(true));
-    cleaner.setCleanupHandlers(Arrays.asList(mockedTaskHandler));
+    cleaner.setCleanupHandlers(List.of(mockedTaskHandler));
     cleaner.run();
 
     ShowCompactResponse rsp = txnHandler.showCompact(new ShowCompactRequest());
     List<ShowCompactResponseElement> compacts = rsp.getCompacts();
-    Assert.assertEquals(1, compacts.size());
+    assertEquals(1, compacts.size());
     Mockito.verify(mockedMetadataCache, times(4)).computeIfAbsent(any(), any());
     Mockito.verify(mockedTaskHandler, times(1)).resolveTable(any(), any());
   }
